# stream-cluster

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bench_random.clustered.txt  bench_walk.clustered.txt  benchmark_128d.clustered.txt  benchmarks.bash  test_pred.clustered.txt  test_repeat.txt  test_repeat_3d.txt  test_repeat_noise.txt  test_repeat_walk.txt  test_te4.clustered.txt  test_trans.clustered.txt  test_trans.txt
.github/workflows/: benchmark.yml  cmake-multi-platform.yml  sync-wiki.yml
benchmark/: benchmark_data.clustered.txt  benchmark_data.txt  result_GProb.txt  result_Prediction.txt  result_Standard.txt  summary.md
benchmark_data.clusterdat/: anchors.txt  cluster_0.txt  cluster_1.txt  cluster_2.txt  cluster_counts.txt  dcc.txt  frame_membership.txt  transition_matrix.txt
benchmarks/: .RESULTS.md.swp  RESULTS.md  benchmarks.bash  check_birch_params.py  run_birch.py  run_birch_stream.py  run_birch_video.py  run_video_only.bash  runbenchmark  runtest
output_gprob_test/: distall.txt
output_test/: cluster_counts.txt  distall.txt
output_test_small/: distall.txt
output_vv_test/: distall.txt
python/: README.md  image_cluster.py  test_wrapper.py
src/: ascii-spot-2-video.c  cluster.c  cluster_core.c  cluster_core.h  cluster_defs.h  cluster_io.c  cluster_io.h  common.h  framedistance.c  frameread.c  frameread.h  image.c  image.h  main.c  mktestseq.c  model_3d.c  model_nd.c  plot_clusters.c  png_io.c  simple_font.h  txt2mp4.c
tests/: generate_data.py  generate_test_fits.c
wiki/: Algorithm-Details.md  Benchmarks.md  Home.md  Practical-Use.md
